# LLM-Data-Scientist

./: .gitignore  .ignore  CLAUDE.md  README.md  build_presentation.py  deliverable.md  fill_template.py  pyproject.toml
archive/: Project Planning & Requirements Analysis.docx  System Design.docx
config/: default.yaml
experiments/: index_codebooks.py  questions.yaml  run_evaluation.py  run_experiment.py  run_final_eval.sh
lastDraft/: Midway Report.docx  Requirements Analysis.docx  System Design.docx
reports/: IEEE_Research_Paper.docx  Implementation.docx  Result.docx  Testing & Evaluation.docx
src/agents/: base.py  llm_factory.py  multi_agent.py  rag_agent.py  single_agent.py  tools.py
src/analysis/: executor.py  statistics.py
src/evaluation/: comparator.py  ground_truth.py  metrics.py
src/rag/: indexer.py  retriever.py
src/reporting/: report.py
tests/: test_executor.py  test_metrics.py  test_registry.py  test_statistics.py
web/: app.py
web/static/css/: style.css
web/templates/: analysis.html  base.html  comparison.html  home.html  matrix.html  models.html  results.html
